renombrado el proyecto

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 /EjerciciosSemana1/Semana1Dia1/nbproject/private/
 /EjerciciosSemana1/Semana1Dia1/build/
+/EjerciciosSemana1/Dia1/nbproject/private/
