Terminado ejercicio 2 clase 5

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /JavaBasico/EjerciciosSemana2/Clase6/Ejercicio2/build/
 /JavaBasico/EjerciciosSemana2/Clase7/Ejercicio1/target/
 /JavaBasico/EjerciciosSemana2/Clase7/Ejercicio2/target/
+/JavaBasico/EjerciciosSemana2/Clase5/Ejercicio2/build/
